# cmake_cpp_warnings

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: cpp_warnings.cmake
src/: main.cpp
